Refactored some stuff to make it work in java 10.